fix methods for post file. Enable command for upload image. Remove unworked methods.