@@ -13,11 +13,9 @@ import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URL;
-import java.net.URLConnection;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -73,71 +71,45 @@ public class HttpUtils {
         return response;
     }
 
-    public int postFileJavaHTTPClient(String url, Path fileName) throws IOException {
-        File file = new File(fileName.toUri());
 
-        MimeMultipartData mimeMultipartData = MimeMultipartData.newBuilder()
-                .withCharset(StandardCharsets.UTF_8)
-                .addFile("file2", file.toPath(), Files.probeContentType(file.toPath()))
-                .build();
-
-        HttpRequest request = HttpRequest.newBuilder()
-                .header("Content-Type", mimeMultipartData.getContentType())
-                .POST(mimeMultipartData.getBodyPublisher())
-                .uri(URI.create(URLHOST + url))
-                .build();
-
-        try {
-            var response = HTTP_CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
-            return response.statusCode();
-        } catch (InterruptedException e) {
-            // magic number
-            return 0;
-        }
-
-    }
-
-    public int postFileJavaUrlConnection(String url, Path filename) throws IOException {
+    public int postFileJavaUrlConnection(String url, Path path) throws IOException {
         String charset = "UTF-8";
-        String param = "value";
-        File binaryFile = new File(filename.toUri());
+        File binaryFile = new File(path.toUri());
         String boundary = Long.toHexString(System.currentTimeMillis()); // Just generate some unique random value.
         String CRLF = "\r\n"; // Line separator required by multipart/form-data.
 
         HttpURLConnection connection = (HttpURLConnection) new URL(URLHOST + url).openConnection();
-        connection.setRequestMethod("POST");
         connection.setDoOutput(true);
-
-        connection.setRequestProperty("Content-Type", "multipart/form-data; boundary=" + boundary);
+        connection.setUseCaches(false);
+        connection.setRequestProperty("Accept-Charset", "utf-8");
+        connection.setRequestProperty("Connection", "keep-alive");
+        connection.setRequestProperty("Content-Type", "multipart/form-data;boundary=" + boundary);
+        connection.setRequestProperty("Accept", "application/json");
+        connection.connect();
 
         try (
                 OutputStream output = connection.getOutputStream();
                 PrintWriter writer = new PrintWriter(new OutputStreamWriter(output, charset), true)
         ) {
-            // Send normal param.
-            writer.append("--").append(boundary).append(CRLF);
-            writer.append("Content-Disposition: form-data; name=\"param\"").append(CRLF);
-            writer.append("Content-Type: text/plain; charset=").append(charset).append(CRLF);
-            writer.append(CRLF).append(param).append(CRLF).flush();
 
             // Send binary file.
             writer.append("--").append(boundary).append(CRLF);
-            writer.append("Content-Disposition: form-data; name=\"binaryFile\"; filename=\"").append(binaryFile.getName()).append("\"").append(CRLF);
-            writer.append("Content-Type: ").append(URLConnection.guessContentTypeFromName(binaryFile.getName())).append(CRLF);
-            writer.append("Content-Transfer-Encoding: binary").append(CRLF);
-            writer.append(CRLF).flush();
+            writer.append("Content-Disposition: form-data;name=\"file\";" + "filename=\"" + path.getFileName() + "\"").append(CRLF).append(CRLF).flush();
+
             Files.copy(binaryFile.toPath(), output);
             output.flush(); // Important before continuing with writer!
-            writer.append(CRLF).flush(); // CRLF is important! It indicates end of boundary.
+            writer.append(CRLF).append(CRLF).flush(); // CRLF is important! It indicates end of boundary.
 
             // End of multipart/form-data.
             writer.append("--").append(boundary).append("--").append(CRLF).flush();
+
+            // Request is lazily fired whenever you need to obtain information about response.
+            int responseCode = connection.getResponseCode();
+            System.out.println(responseCode); // Should be 200
+            return responseCode;
         }
 
-// Request is lazily fired whenever you need to obtain information about response.
-        int responseCode = connection.getResponseCode();
-        System.out.println(responseCode); // Should be 200
-        return responseCode;
+
     }
 
     public int postFileApacheHTTPClient(String url, Path filename) throws IOException {
@@ -166,16 +138,88 @@ public class HttpUtils {
         }
     }
 
-    public int postFileJanovVersion(String url, Path path) throws IOException, InterruptedException {
-        final HttpRequest.BodyPublisher bodyPublisher = HttpRequest.BodyPublishers.ofFile(path);
-        HttpClient client = HttpClient.newHttpClient();
-        HttpRequest request = HttpRequest.newBuilder()
-                .POST(bodyPublisher)
-                .header("Content-type", Files.probeContentType(path))
-                .uri(URI.create(URLHOST + url))
-                .build();
-        final HttpResponse<String> send = client.send(request, HttpResponse.BodyHandlers.ofString());
-        return send.statusCode();
+
+    public int postFileNesvitVersion(String url, Path path) throws IOException {
+        //final String PET = "https://petstore.swagger.io/v2/pet/";
+        final String nextLine = "\r\n";
+        final String twoHyphens = "--";
+        final String boundary = Long.toString(System.currentTimeMillis());
+
+        File uploadFile = new File(path.toUri());
+        //String url = PET + id + "/uploadImage";
+        URL uri = new URL(URLHOST + url);
+
+        HttpURLConnection httpURLConnection = (HttpURLConnection) uri.openConnection();
+        httpURLConnection.setRequestMethod("POST");
+        httpURLConnection.setRequestProperty("Charset", "UTF-8");
+
+
+        OutputStream outputStream = null;
+        FileInputStream inputStream = null;
+        try {
+            httpURLConnection.setDoOutput(true);
+            httpURLConnection.setUseCaches(false);
+            httpURLConnection.setRequestProperty("Accept-Charset", "utf-8");
+            httpURLConnection.setRequestProperty("Connection", "keep-alive");
+            httpURLConnection.setRequestProperty("Content-Type", "multipart/form-data;boundary=" + boundary);
+            httpURLConnection.setRequestProperty("Accept", "application/json");
+            httpURLConnection.connect();
+
+            outputStream = new DataOutputStream(httpURLConnection.getOutputStream());
+
+            String header = twoHyphens + boundary + nextLine;
+
+            header += "Content-Disposition: form-data;name=\"file\";" + "filename=\"" + path.getFileName() + "\"" + nextLine + nextLine;
+
+            outputStream.write(header.getBytes());
+
+            inputStream = new FileInputStream(uploadFile);
+            byte[] bytes = new byte[1024];
+            int length;
+            while ((length = inputStream.read(bytes)) != -1) {
+                outputStream.write(bytes, 0, length);
+            }
+
+            outputStream.write(nextLine.getBytes());
+
+            String footer = nextLine + twoHyphens + boundary + twoHyphens + nextLine;
+            outputStream.write(footer.getBytes());
+            outputStream.flush();
+            return httpURLConnection.getResponseCode();
+//            if (httpURLConnection.getResponseCode() == HttpURLConnection.HTTP_OK) {
+////                System.out.println(connection.getResponseCode() + " " + connection.getResponseMessage());
+//                BufferedReader in =
+//                        new BufferedReader(
+//                                new InputStreamReader(httpURLConnection.getInputStream()));
+//                StringBuffer response = new StringBuffer();
+//                String inputLine;
+//                while ((inputLine = in.readLine()) != null) {
+//                    response.append(inputLine);
+//                }
+//                in.close();
+//                System.out.println(response);
+//            } else {
+//                System.err.println("Загрузка не удалась");
+//            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        } finally {
+            try {
+                if (outputStream != null) {
+                    outputStream.close();
+                }
+                if (inputStream != null) {
+                    inputStream.close();
+                }
+                if (httpURLConnection != null) {
+                    httpURLConnection.disconnect();
+                }
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+
+        return 0;
     }
 
     public HttpResponse<String> put(String url, String body) {
